rb_itreator update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,12 @@
         "__functional_03": "cpp",
         "list": "cpp",
         "map": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "*.tcc": "cpp",
+        "clocale": "cpp",
+        "deque": "cpp",
+        "numeric": "cpp",
+        "random": "cpp",
+        "fstream": "cpp"
     }
 }
